tests/syntax_tests/data/parsing/errors/expressions/typeDefInFunction.res
let f = () => {
  type t = int
  1
}

